<resources>
    <string name="app_name">SaveHere</string>
    <string name="show_name">내가 여기에 왔었다</string>

    <string name="txtMapOnly">Map\nShot</string>
    <string name="txtCameraOnly">Camera\nShot</string>
    <string name="txtCameraMap">Camera\n&amp; Map\nShot</string>
    <string name="txtPosition">Position</string>
    <string name="txtDateTime">Date\nTime</string>

    <string name="txtPlace">place info</string>
    <string name="txtAddress">address</string>
    <string name="maps_api_key">AIzaSyCEun8V0vX_idWcvan5WMxiQvYCemxIkD4</string>
    <string name="photo">photo</string>
    <string name="timer_off">Timer Off</string>
    <string name="timer_on">Timer ON</string>
    <string name="zoom_value">16</string>
    <string name="todo">TODO</string>
    <string name="date_time">2019/02/18 19:24:05</string>


</resources>
