<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.urrecliner.andriod.savehere.LandActivity"
        tools:layout="@layout/activity_land">
    </fragment>
    <ImageView
        android:id="@+id/mapImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/datetimeText"
        android:layout_width="200sp"
        android:layout_height="64sp"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/txtDateTime"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textColor="#1a3b91"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/mapImage"
        android:text="@string/txtAddress"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#1a3b91"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/placeText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/addressText"
        android:layout_centerHorizontal="true"
        android:text="@string/txtPlace"
        android:gravity="center"
        android:textColor="#1a3b91"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo"
        android:padding="0dp"
        android:src="@mipmap/icon_riopapa_blue_yellow" />

</RelativeLayout>
