<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/addressText"
        android:autofillHints="phone"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:inputType="text|textMultiLine"
        android:labelFor="@id/addressText"
        android:lineSpacingExtra="4sp"
        android:selectAllOnFocus="true"
        android:text="@string/txtAddress"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/mapScale"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/map_scale"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/frame"
        app:layout_constraintTop_toBottomOf="@id/addressText"
        />

    <com.urrecliner.savehere.WheelView
        android:id="@+id/wheel_zoom"
        android:layout_height="120dp"
        android:layout_width="90dp"
        app:layout_constraintTop_toBottomOf="@id/mapScale"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/frame"
        />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/addressText"
        app:layout_constraintLeft_toRightOf="@id/mapScale"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintRight_toRightOf="parent">
        <SurfaceView
            android:id="@+id/camera_surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </SurfaceView>
    </FrameLayout>

    <ImageButton
        android:id="@+id/timer"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/wheel_zoom"
        android:layout_margin="30sp"
        android:background="#00000000"
        android:contentDescription="@string/timer_on"
        android:src="@mipmap/icon_timer_off_min"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/frame"
        app:layout_constraintTop_toBottomOf="@id/wheel_zoom" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:rotation="90"
        android:padding="8dp"
        android:background="#c0a196"
        android:text="@string/txtCameraOnly"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="16sp"
        android:foregroundGravity="center"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/frame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnCameraMap"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btnCameraMap"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#29E1D6"
        android:rotation="90"
        android:padding="8dp"
        android:text="@string/txtCameraMap"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="16sp"
        android:foregroundGravity="center"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnCamera"
        app:layout_constraintRight_toRightOf="parent"
         />

</android.support.constraint.ConstraintLayout>
