<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/photoImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:contentDescription="@string/photo" />

    <TextView
        android:id="@+id/datetimeCText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="19dp"
        android:layout_alignParentStart="true"
        android:text="@string/date_time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/backColor"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/datetimeCText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="19dp"
        android:layout_alignParentStart="true"
        android:text="@string/date_time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/backColor"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/datetimeCText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="21dp"
        android:layout_alignParentStart="true"
        android:text="@string/date_time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/backColor"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/datetimeCText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="21dp"
        android:layout_alignParentStart="true"
        android:text="@string/date_time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/backColor"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/datetimeCText0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:text="@string/date_time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/foreColor"
        android:textSize="22sp"
        android:textStyle="bold" />

<!--    place -->
    <TextView
        android:id="@+id/placeCText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="62dp"
        android:text="@string/txtPlace"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/placeCText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="62dp"
        android:text="@string/txtPlace"
        android:textAlignment="center"
        android:textColor="@color/backColor"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/placeCText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="58dp"
        android:text="@string/txtPlace"
        android:textAlignment="center"
        android:textColor="@color/backColor"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/placeCText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="58dp"
        android:text="@string/txtPlace"
        android:textAlignment="center"
        android:textColor="@color/backColor"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/placeCText0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="60dp"
        android:text="@string/txtPlace"
        android:textAlignment="center"
        android:textColor="@color/foreColor"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0sp"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:text="@string/txtAddress"
        android:textAlignment="center"
        android:textColor="@color/backColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2sp"
        android:layout_marginBottom="37dp"
        android:layout_alignParentBottom="true"
        android:text="@string/txtAddress"
        android:textAlignment="center"
        android:textColor="@color/backColor"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/address3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:text="@string/txtAddress"
        android:textAlignment="center"
        android:textColor="@color/foreColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/GPSText1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="13dp"
        android:text="@string/txtPlace"
        android:textColor="@color/backColor"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/GPSText2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="15dp"
        android:text="@string/txtPlace"
        android:textColor="@color/backColor"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/GPSText0"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="14dp"
        android:layout_centerHorizontal="true"
        android:text="@string/txtPlace"
        android:gravity="center"
        android:textColor="@color/foreColor"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:alpha="0.5"
        android:contentDescription="@string/todo"
        android:padding="0dp"
        android:src="@raw/signature_yellow_min" />

</RelativeLayout>

